tests/dataset/tpc-ds/compiler/rust/q61.error
rustc: exit status 1
error[E0277]: cannot multiply `i32` by `f64`
  --> /tmp/q61.rs:20:31
   |
20 |     let result = ((promotions * 100 as f64 as f64 as f64) as f64) / total;
   |                               ^ no implementation for `i32 * f64`
   |
   = help: the trait `Mul<f64>` is not implemented for `i32`
   = help: the following other types implement trait `Mul<Rhs>`:
             `&i32` implements `Mul<i32>`
             `&i32` implements `Mul`
             `i32` implements `Mul<&i32>`
             `i32` implements `Mul`

error[E0277]: cannot divide `f64` by `i32`
  --> /tmp/q61.rs:20:67
   |
20 |     let result = ((promotions * 100 as f64 as f64 as f64) as f64) / total;
   |                                                                   ^ no implementation for `f64 / i32`
   |
   = help: the trait `Div<i32>` is not implemented for `f64`
   = help: the following other types implement trait `Div<Rhs>`:
             `&f64` implements `Div<f64>`
             `&f64` implements `Div`
             `f64` implements `Div<&f64>`
             `f64` implements `Div`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
